upgrading to java 20 and spring boot 3